# ai-gateway

./: .gitignore  Cargo.toml  README.md  build_error.log.txt  docker-compose.yml  env.example  extracted_content.json  test_mcp.jsonl
migrations/: 20240101000001_init.sql  20260328174722_fix_embedding_dimension_256.sql  20260329170110_add_sites_table.sql
public/: llms.txt
public/cleanokean.org/: llms.txt
public/cryptonewsnft.com/: llms.txt
public/marchcat.com/: llms.txt
public/newscryptonft.com/: llms.txt
scripts/: test_pipeline.sh
src/: lib.rs  main.rs
src/api/: routes.rs  state.rs
src/api/handlers/: admin.rs  crawl.rs  llms.rs  mod.rs  search.rs  sites.rs
src/chunking/: mod.rs  semantic.rs  sentence.rs
src/crawler/: fetcher.rs  mod.rs  parser.rs  types.rs
src/llms_txt/: generator.rs  mod.rs  sitemap.rs
src/mcp_server/: server.rs
src/storage/: db.rs  embeddings.rs  mod.rs  types.rs
src/utils/: mod.rs
